--- a/littlexsprefs/Resources/Root.plist
+++ b/littlexsprefs/Resources/Root.plist
@@ -122,15 +122,29 @@
 		</dict>
 		<dict>
 			<key>cell</key>
-			<string>PSSwitchCell</string>
+			<string>PSLinkListCell</string>
 			<key>default</key>
-			<false/>
+			<integer>0</integer>
 			<key>defaults</key>
 			<string>com.binksalex.littlexsprefs</string>
 			<key>key</key>
-			<string>bottomInset</string>
+			<string>bottomInsetVersion</string>
 			<key>label</key>
-			<string>Bottom inset</string>
+			<string>Bottom Inset</string>
+			<key>detail</key>
+			<string>PSListItemsController</string>
+			<key>validValues</key>
+			<array>
+				<integer>0</integer>
+				<integer>1</integer>
+				<integer>2</integer>
+			</array>
+			<key>validTitles</key>
+			<array>
+				<string>No bottom inset</string>
+				<string>Old bottom inset</string>
+				<string>New bottom inset</string>
+			</array>
 		</dict>
 		<dict>
 			<key>cell</key>
