--- a/littlexsprefs/Resources/Root.plist
+++ b/littlexsprefs/Resources/Root.plist
@@ -200,6 +200,42 @@
 		</dict>
 		<dict>
 			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<false/>
+			<key>defaults</key>
+			<string>com.binksalex.littlexsprefs</string>
+			<key>key</key>
+			<string>HideSBCC</string>
+			<key>label</key>
+			<string>Hide Status Bar in Control Center</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<false/>
+			<key>defaults</key>
+			<string>com.binksalex.littlexsprefs</string>
+			<key>key</key>
+			<string>PIP</string>
+			<key>label</key>
+			<string>Picture In Picture</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<false/>
+			<key>defaults</key>
+			<string>com.binksalex.littlexsprefs</string>
+			<key>key</key>
+			<string>ProudLock</string>
+			<key>label</key>
+			<string>FaceID Icon [BETA]</string>
+		</dict>
+		<dict>
+			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>label</key>
 			<string>Apply Changes</string>
