--- a/control
+++ b/control
@@ -1,12 +1,12 @@
 Package: com.binksalex.littlexs
 Name: LittleXS
 Depends: mobilesubstrate
-Version: 2.1.0
+Version: 2.1.3
 Architecture: iphoneos-arm
 Description: LittleX revitalized for iOS 12.
 Maintainer: binksalex & Ryan Nair
 Author: binksalex & Ryan Nair
 Section: Tweaks
-Replaces: com.binksalex.fluidify, com.ryannair05.poseidon, com.ryannair05.poseidon-rounded, com.vitataf.homegesture, com.VitaTaf.HomeGesture, com.ioscreatix.littlex
+Replaces: com.binksalex.fluidify, com.vitataf.homegesture, com.VitaTaf.HomeGesture, com.ioscreatix.littlex
 Provides: com.binksalex.fluidify, com.ryannair05.poseidon, com.ryannair05.poseidon-rounded, com.vitataf.homegesture, com.VitaTaf.HomeGesture, com.ioscreatix.littlex, com.duraidabdul.neptune
-Conflicts: com.binksalex.fluidify, com.ryannair05.poseidon, com.ryannair05.poseidon-rounded, com.vitataf.homegesture, com.VitaTaf.HomeGesture, com.ioscreatix.littlex
+Conflicts: com.binksalex.fluidify, com.vitataf.homegesture, com.VitaTaf.HomeGesture, com.ioscreatix.littlex
